Sample3Eternus/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>FACultyID__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>STudentID__c</fullName>
        <description>UNique</description>
        <displayFormat>STU-{0000}</displayFormat>
        <label>STudentID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SchoolId__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StduntNAme__c</fullName>
        <label>StduntNAme</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>